2000-04-13  Andreas Jaeger  <aj@suse.de>

	* sysdeps/mips/dl-machine.h (__dl_runtime_resolve): Handle symbol
	versioning.
	(elf_machine_got_rel): Only add runtime display if needed.

2000-04-13  Andreas Jaeger  <aj@suse.de>

	* sysdeps/unix/sysv/linux/mips/clone.S: Fix function.

	* sysdeps/unix/mips/pipe.S: Reorder instructions since .reorder is
	default.

	* sysdeps/mips/__longjmp.c (__longjmp): Use $25 to fix problems
	with some applications.
	Patches by Ralf Baechle <ralf@uni-koblenz.de>.

	* sysdeps/mips/bsd-setjmp.S: Use __PIC__.
	* sysdeps/mips/bsd-_setjmp.S: Likewise.
	* sysdeps/mips/setjmp.S: Likewise.

	* sysdeps/unix/sysv/linux/mips/pipe.S: New file.
	
2000-04-13  Ulrich Drepper  <drepper@redhat.com>

	* posix/globtest.sh: Work around inconsistency with expanding ~/
	in shell (PR libc/1690).  Reported by patsmith@pobox.com.

2000-04-12  Ulrich Drepper  <drepper@redhat.com>

	* posix/getconf.c: Add support for many more POSIX options.
	* sysdeps/posix/sysconf.c: Likewise.
	* sysdeps/generic/bits/confname.h: Add many more POSIX options.
	* sysdeps/mach/hurd/bits/posix_opt.h: Add _POSIX_REGEXP and
	_POSIX_SHELL.
	* sysdeps/unix/sysv/linux/bits/posix_opt.h: Likewise.
	* sysdeps/unix/sysv/linux/i386/bits/time.h: Rename __CLOCK_HIGHRES to
	CLOCK_PROCESS_CPUTIME_ID.  Add define CLOCK_MONOTONIC and
	CLOCK_THREAD_CPUTIME_ID.
	* sysdeps/unix/i386/clock_getcpuclockid.c: Set *clock_id to
	CLOCK_PROCESS_CPUTIME_ID.
	* sysdeps/unix/i386/i586/clock_getres.c: Change for renaming of
	__CLOCK_HIGHRES to CLOCK_PROCESS_CPUTIME_ID.  Handle
	CLOCK_THREAD_CPUTIME_ID and CLOCK_MONOTONIC the same.
	* sysdeps/unix/i386/i586/clock_gettime.c: Likewise.

	* malloc/Makefile (tests): Add tst-calloc.
	* malloc/tst-calloc.c: New file.

	* sysdeps/arm/libm-test-ulps: New file.

	* malloc/malloc.c: Undo all of today's changes.

	* locale/programs/locale.c (show_info): Don't try to look into
	data for LC_ALL (there is none).
